# t2-geometria

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  convex_hull_analysis.ipynb  coverage.ps1  coverage.sh  gcovr.cfg  run_benchmarks_unix.py  run_benchmarks_windows.py
data/: DoubleAtLeastThreeColinearTest.csv  DoubleHullTest_0.01_0.csv  DoubleHullTest_0.01_10.csv  DoubleHullTest_0.01_3.csv  DoubleHullTest_0.1_0.csv  DoubleHullTest_0.1_10.csv  DoubleHullTest_0.1_3.csv  DoubleHullTest_1.0_0.csv  DoubleHullTest_1.0_10.csv  DoubleHullTest_1.0_3.csv  DoubleHullTest_100_0.csv  DoubleHullTest_100_10.csv  DoubleHullTest_100_3.csv  DoubleHullTest_10_0.csv  DoubleHullTest_10_10.csv  DoubleHullTest_10_3.csv  DoubleHullTest_30_0.csv  DoubleHullTest_30_10.csv  DoubleHullTest_30_3.csv  DoubleHullTest_50_0.csv  DoubleHullTest_50_10.csv  DoubleHullTest_50_3.csv  DoubleHullTest_70_0.csv  DoubleHullTest_70_10.csv  DoubleHullTest_70_3.csv  DoubleRandomTest.csv  IntegerAtLeastThreeColinearTest.csv  IntegerHullTest_0.01_0.csv  IntegerHullTest_0.01_10.csv  IntegerHullTest_0.01_3.csv  IntegerHullTest_0.1_0.csv  IntegerHullTest_0.1_10.csv  IntegerHullTest_0.1_3.csv  IntegerHullTest_1.0_0.csv  IntegerHullTest_1.0_10.csv  IntegerHullTest_1.0_3.csv  IntegerHullTest_10.0_10.csv  IntegerHullTest_10_0.csv  IntegerRandomTest.csv  LLAtLeastThreeColinearTest.csv  (+25 more)
include/: convex_hull_strategy.h  gift_wrapping_strategy.h  hull_tester.h  point_generation_strategy.h  poligono.h  punto.h  vector.h
include/generators/: at_least_three_colinear_points_strategy.h  completely_random_points_strategy.h  hull_percentage_strategy.h  non_colinear_points_strategy.h  point_generation_strategy.h
include/hull_strategies/: convex_hull_strategy.h  divide_and_conquer_strategy.h  gift_wrapping_strategy.h
include/performance_testers/: hull_tester.h
src/: CMakeLists.txt  double_hull_test.cpp  gift_wrap_test.cpp  gift_wrapping_strategy.cpp  hull_test.cpp  hull_tester.cpp  integer_hull_test.cpp  ll_hull_test.cpp  main.cpp  poligono.cpp  punto.cpp  vector.cpp
src/generators/: CMakeLists.txt  at_least_three_colinear_points_strategy.cpp  completely_random_points_strategy.cpp  hull_percentage_strategy.cpp  non_colinear_points_strategy.cpp
src/hull_strategies/: CMakeLists.txt  divide_and_conquer_strategy.cpp  gift_wrapping_strategy.cpp
src/performance_testers/: CMakeLists.txt  hull_tester.cpp
src/performance_testers/outer_circle/: CMakeLists.txt  double_hull_test.cpp  float_hull_test.cpp  integer_hull_test.cpp  ll_hull_test.cpp
src/performance_testers/random_points/: CMakeLists.txt  double_random_test.cpp  float_random_test.cpp  integer_random_test.cpp  ll_random_test.cpp
src/performance_testers/random_points/at_least_three_colinear/: CMakeLists.txt  double_at_least_three_colinear_test.cpp  float_at_least_three_colinear_test.cpp  integer_at_least_three_colinear_test.cpp  ll_at_least_three_colinear_test.cpp
src/performance_testers/random_points/non_colinear/: CMakeLists.txt  double_non_colinear_test.cpp  float_non_colinear_test.cpp  integer_non_colinear_test.cpp  ll_non_colinear_test.cpp
test/: CMakeLists.txt  poligono_test.cc  punto_test.cc  vector_test.cc
